<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.group26.weatherapp.AddCityActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cityEditText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/city_hint"
        android:layout_marginTop="35dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stateEditText"
        android:layout_below="@+id/cityEditText"
        android:hint="@string/state_hint"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_city_button_text"
        android:id="@+id/saveCityButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/stateEditText"
        android:layout_marginTop="40dp"/>
</RelativeLayout>
